# darkswan-ds-codec

./: CHANGELOG.md  LICENSE  README.md  ds_codec.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  labels-sync.yml
docs/: REPOSITORY_PROFILE.md
samples/: official.txt  official1.ds
tests/: test_ds_codec.py
