[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "darkswan-ds"
version = "0.4.0"
description = "DarkSwan DS Codec: DS1/DS2 whitespace codec and steganography toolkit with policy controls"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "DarkSwan" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
ds-codec = "ds_codec:cli_main"

[tool.setuptools]
py-modules = ["ds_codec"]
